# masx-geosignal

./: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  README.md  _check_tables.py  alembic.ini  docker-compose.yml  pip_output.txt  pyproject.toml  test_output.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
apps/: __init__.py
apps/api/: main.py  schemas.py
apps/cluster_worker/: __init__.py  main.py  service.py
apps/ingest_worker/: __init__.py  main.py  service.py
apps/orchestrator/: __init__.py  main.py
apps/score_alert_worker/: __init__.py  main.py  service.py
apps/summary_worker/: __init__.py  main.py  service.py
core/: __init__.py
core/config/: __init__.py  logging.py  settings.py
core/db/: __init__.py  engine.py  models.py  repositories.py  table_resolver.py
core/pipeline/: __init__.py  alerts.py  cluster.py  dedupe.py  embed.py  extract.py  fetch.py  geo.py  json_parse.py  lang.py  local_summarizer.py  ner.py  score.py  summarize.py  toml_serde.py  topics.py  translate.py
docs/: ARCHITECTURE.md  COST_MODEL.md  RUNBOOK.md  SETUP.md  TROUBLESHOOTING.md  initial_db.md
scripts/: export_onnx.py  reset_entries.py  reset_entries_mini_db.py  seed_debug_data.py  seed_mini_data.py
tests/: conftest.py  test_api.py  test_cluster.py  test_config.py  test_dedupe.py  test_extract.py  test_fetch.py  test_local_summarizer.py  test_score.py  test_summarize.py  test_toml_serde.py
