[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masx-gsgi"
version = "0.1.0"
description = "Global Security & Geopolitical Intelligence — News Ingestion + NLP Pipeline"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.12"
authors = [{name = "MASX Team"}]

dependencies = [
    # -- Async HTTP --
    "httpx[http2]>=0.27",
    "aiohttp>=3.9",
    # -- Database --
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    # -- Config --
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    # -- Extraction --
    "trafilatura>=1.8",
    "readability-lxml>=0.8",
    "justext>=3.0",
    "boilerpy3>=1.0",
    "lxml>=5.1",
    "beautifulsoup4>=4.12",
    # -- NLP --
    "sentence-transformers>=3.0",
    "transformers>=4.38",
    "fasttext-wheel>=0.9.2",
    "onnxruntime>=1.17",
    "tokenizers>=0.15",
    "pycountry>=24.6",
    # -- Dedupe --
    "datasketch>=1.6",
    "simhash>=2.1",
    # -- LLM (OpenAI SDK used as universal client for Together AI, Mistral, etc.) --
    "openai>=1.12",
    # -- Compression --
    "zstandard>=0.22",
    # -- Logging / Observability --
    "structlog>=24.1",
    "rich>=13.7",
    # -- Misc --
    "click>=8.1",
    "tenacity>=8.2",
    "orjson>=3.9",
    "json-repair>=0.30",
    "python-rapidjson>=1.14",
    "pyjson5>=1.6",
    "tomli_w>=1.0",
    "blingfire>=0.1.8",
    "optimum[onnxruntime]>=1.17",
    # -- API --
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.42",
]
translation = [
    "argostranslate>=1.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "factory-boy>=3.3",
    "faker>=22.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "httpx[http2]>=0.27",
]

[project.scripts]
gsgi-orchestrator = "apps.orchestrator.main:cli"
gsgi-ingest = "apps.ingest_worker.main:cli"
gsgi-cluster = "apps.cluster_worker.main:cli"
gsgi-summarize = "apps.summary_worker.main:cli"
gsgi-score = "apps.score_alert_worker.main:cli"
gsgi-api = "apps.api.main:cli"

[tool.setuptools.packages.find]
include = ["core*", "apps*"]

# ── Ruff ──────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["core", "apps", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "SIM",       # flake8-simplify
    "TCH",       # type-checking
    "RUF",       # ruff-specific
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["core", "apps"]

# ── MyPy ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "trafilatura.*",
    "readability.*",
    "justext.*",
    "boilerpy3.*",
    "datasketch.*",
    "simhash.*",
    "fasttext.*",
    "sentence_transformers.*",
    "transformers.*",
    "onnxruntime.*",
    "pgvector.*",
    "pycountry.*",
    "argostranslate.*",
]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external deps)",
    "integration: Integration tests (requires DB)",
    "e2e: End-to-end tests",
    "slow: Slow tests (>10s)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
